dialog to have min-height to avoid scrollbar in mobile

--- a/src/assets/styles/_global.scss
+++ b/src/assets/styles/_global.scss
@@ -110,4 +110,7 @@ hr {
   .header {
     height: 100vh !important;
   }
+  .mat-dialog-container {
+    min-height: 370px !important;
+  }
 }
